[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/icons/flip_tool_g126.png" type="Texture" id=1]
[ext_resource path="res://assets/icons/flip_tool_g129.png" type="Texture" id=2]
[ext_resource path="res://assets/icons/flip_tool_g134.png" type="Texture" id=3]
[ext_resource path="res://assets/icons/flip_tool_g125.png" type="Texture" id=4]
[ext_resource path="res://ui/controllers/tools/flip_tool_controller.gd" type="Script" id=5]
[ext_resource path="res://ui/components/config_toggle_button.gd" type="Script" id=7]
[ext_resource path="res://ui/materials/layer_texture_material.tres" type="Material" id=10]

[node name="FlipTool" type="VBoxContainer"]
material = ExtResource( 10 )
margin_right = 231.0
margin_bottom = 90.0
script = ExtResource( 5 )
tool_button = "res://ui/controllers/tools/tool_buttons/flip_button.tscn"

[node name="Buttons" type="HBoxContainer" parent="."]
margin_right = 231.0
margin_bottom = 26.0

[node name="FlipH" type="TextureButton" parent="Buttons"]
margin_right = 20.0
margin_bottom = 26.0
rect_min_size = Vector2( 20, 0 )
toggle_mode = true
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 1 )
expand = true
stretch_mode = 5
script = ExtResource( 7 )
flag_name_const = "FLAG_LOCK_PROPORTION_TRANSFORM"

[node name="FlipV" type="TextureButton" parent="Buttons"]
margin_left = 24.0
margin_right = 44.0
margin_bottom = 26.0
rect_min_size = Vector2( 20, 0 )
toggle_mode = true
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 2 )
expand = true
stretch_mode = 5
script = ExtResource( 7 )
flag_name_const = "FLAG_LOCK_PROPORTION_TRANSFORM"

[node name="Spacing" type="Control" parent="Buttons"]
margin_left = 48.0
margin_right = 175.0
margin_bottom = 26.0
size_flags_horizontal = 3

[node name="Reset" type="Button" parent="Buttons"]
margin_left = 179.0
margin_right = 231.0
margin_bottom = 26.0
text = "RESET"

[connection signal="pressed" from="Buttons/FlipH" to="." method="_on_FlipH_pressed"]
[connection signal="pressed" from="Buttons/FlipV" to="." method="_on_FlipV_pressed"]
[connection signal="pressed" from="Buttons/Reset" to="." method="_on_Reset_pressed"]
